--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,15 +1,26 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="UTF-8">
-		<title>Insert title here</title>
-		
-		
-	</head>
-	
-	<body>
-		<h1>Olá</h1>
-		<a href="/cadastropessoa">CadastrarPessoa</a>
-		
-	</body>
+
+<head>
+	<meta charset="UTF-8">
+	<title>Insert title here</title>
+
+	<!-- MATERIALIZE -->
+	<!--Import Google Icon Font-->
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+	<!--Import materialize.css-->
+	<link type="text/css" rel="stylesheet" href="/materialize/css/materialize.css" media="screen,projection" />
+	<link type="text/css" rel="stylesheet" href="/materialize/css/materialize.min.css" media="screen,projection" />
+</head>
+
+<body>
+	<h1>Olá</h1>
+	<a href="/cadastropessoa">CadastrarPessoa</a>
+
+
+	<script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
+	<script type="text/javascript" src="/materialize/js/materialize.js"></script>
+</body>
+
 </html>
