Adicionando válidações para salvar com anotações do framework na classe Pessoa, sem anotações na validação de cadastro de telefone, e validação direto no front end

--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -33,6 +33,18 @@
 	<h5>Cadastro de Pessoas</h5>
 
 	<div class="row">
+		
+		<br/>
+		
+	<div th:each = "m : ${msg}">
+					<span th:text="${m}" style="color: red"></span>
+				</div>
+	</div>
+		
+		
+		
+		<br/>
+		
 		<form action="salvarpessoa" id="formpessoa" method="post" th:object="${pessoaobj}" class="col s12">
 
 			<div class="row">
