--- a/src/main/resources/templates/cadastro/telefones.html
+++ b/src/main/resources/templates/cadastro/telefones.html
@@ -28,8 +28,17 @@
 	<body>
 		<h4>Spring Boot + Thymeleaf + Material Design Lite</h4><br />
 		<h5>Telefones</h5>
+		
 		<br />
+		
+		<div th:each = "m : ${msg}">
+					<span th:text="${m}" style="color: red"></span>
+				</div>
+	</div>
+		
+		
 		<br />
+		
 		<a class="waves-effect waves-light btn" href="/cadastropessoa">Cadastro Pessoa</a>
 		<br />
 		<br />
@@ -42,9 +51,71 @@
 			</div>
 		</div>
 		
+		<h5>Telefones</h5>
+		
+		<div class="row">
+			
+			<form th:action="@{/addfonePessoa/{pessoaid}(pessoaid=${pessoaobj.id})}" 
+			method="post" class="col s12" onsubmit="return validarCampos()? true : false">
+				
+				<div class="row">
+		
+					<div class="input-field col s6">
+						<label class="active" for="numero">Número</label>
+						<input id="numero" name="numero" class="validate" />
+					</div>
+		
+					<div class="input-field col s6">
+						<label class="active" for="tipo">Tipo</label>
+						<input id="tipo" name="tipo" class="validate" />
+					</div>
+		
+		
+					<input type="submit" value="Adicionar" class="waves-effect waves-light btn" />
+				</div>
+			</form>
+		</div>
+		
+		
+		<table class="striped">
+			<thead>
+				<tr>
+					<th:each=>Número</th>
+					<th>Tipo</th>					
+					<th>Excluir</th>
+				</tr>		
+			</thead>
+			
+			<tr th:each="fone : ${telefones}">
+				<td th:text="${fone.numero}"></td>
+				<td th:text="${fone.tipo}"></td>
+				<td><a th:href="@{/removertelefone/{idtelefone}(idtelefone=${fone.id})}">Excluir</a></td>
+			</tr>
+		</table>
+		
 		
 	
 	   <script type="text/javascript" src="/materialize/js/materialize.min.js"></script>
 	<script type="text/javascript" src="/materialize/js/materialize.js"></script>  
+	
+	
+	 <script type="text/javascript">
+        	function validarCampos() {
+        		
+        		numero = document.getElementById('numero').value;
+        		tipo = document.getElementById('tipo').value;
+        		
+        		if (numero === '') {
+        			alert('Número deve ser informado');
+        			return false;
+        		} else if (tipo === '') {
+        			alert('Tipo deve ser informado');
+        			return false;
+        		}
+        		
+        		return true;
+        	}
+	</script>  
+	
 	</body>
 </html>
